@@ -3,7 +3,10 @@
 	<category label="$LOCALIZE[128]">
 		<setting id="enableservice" label="32900" type="bool" default="true" />
 		<setting id="only_filesystem" label="32904" subsetting="true" type="bool" default="false" visible="eq(-1,true)" />
+		<setting label="32054" type="lsep" />
 		<setting id="titlefree_fanart" label="32901" type="bool" default="true" />
+		<setting id="preferredsize" label="32902" type="labelenum" default="1920x1080" values="1920x1080|1280x720" />
+		<setting id="minimum_rating" label="32907" type="slider" option="int" default="5" range="0,1,10" />
 		<setting label="32052" type="lsep" />
 		<setting id="set_autoaddepisodes" label="32400" type="action" action="RunScript(script.artwork.beef, command=set_autoaddepisodes)" />
 	</category>
@@ -32,7 +35,6 @@
 		<setting id="movie.discart" label="discart" type="bool" default="true" />
 	</category>
 	<category label="$LOCALIZE[10038]">
-		<setting id="preferredsize" label="32902" type="labelenum" default="1920x1080" values="1920x1080|1280x720" />
 		<setting id="highquality_preview" label="32903" type="bool" default="false" />
 		<setting id="identify_alternatives" label="32906" type="bool" default="true" />
 		<setting id="fanarttv_key" label="32905" type="text" />
